--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = ["matplotlib>=3.9.2", "numpy>=2.1.3", "pandas>=2.2.3"]
 
+# [project.scripts]
+# python_lambda = "python_lambda:main"
+
 [tool.uv]
+package = true
 dev-dependencies = ["pytest>=8.3.3"]
 
 [tool.pytest.ini_options]
