--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = ["matplotlib>=3.9.2", "numpy>=2.1.3", "pandas>=2.2.3"]
 
-# [project.scripts]
-# python_lambda = "python_lambda:main"
+[project.scripts]
+app = "python_lambda:plot.render"
 
 [tool.uv]
 package = true
